--- a/style.css
+++ b/style.css
@@ -31,11 +31,6 @@
     vertical-align:bottom;
 }
 
-/* fix firefox responsive images */
-.img-responsive {
-    width: 100%
-}
-
 #content-area {
     display:table;
     padding-left:0px;
@@ -47,6 +42,10 @@
 
 .btn-toolbar {
     text-align: center;
+}
+
+.btn {
+    white-space: normal;
 }
 html{
     font-family:sans-serif;
@@ -82,4 +81,52 @@ div.left-nav .active:not(.menu-item-has-children) {
 div.left-nav .current-menu-item.active:not(.menu-item-has-children) {
     border-color: green;
     border-width: 3px;
+}
+
+#paypal-button{
+    max-height: 47px; 
+    max-width: 147px;
+    width: 80%;
+}
+
+#facbook-button {
+    max-height: 50px;
+    max-width: 50px;
+}
+
+/* responsive text queries */
+@media screen and (max-width: 992px) {
+  .btn,input,div,span,h4 {
+    font-size: 10px;
+    white-space: normal;
+  }
+  h1 {
+    font-size: 24px;  
+  }
+  h2 {
+    font-size: 22px;  
+  }
+  h3 {
+    font-size: 18px;  
+  }
+}
+
+@media screen and (max-width: 768px) {
+  p,.btn,input,div,span,h4 {
+    font-size: 9px;
+    padding: 0px;
+    white-space: normal;
+  }
+  h1 {
+    font-size: 20px;  
+  }
+  h2 {
+    font-size: 18px;  
+  }
+  h3 {
+    font-size: 16px;  
+  }
+  font{
+      font-size: 9px;
+  }
 }
